trying to fix the tooltip tags not wrapping properly

--- a/frontend/src/app/shared/modules/universal-data-tooltip/components/data-tooltip/data-tooltip.component.scss
+++ b/frontend/src/app/shared/modules/universal-data-tooltip/components/data-tooltip/data-tooltip.component.scss
@@ -60,9 +60,11 @@
                 padding: 2px 4px 0 4px;
                 // margin-top: 2px;
                 font-size: 10px;
+                max-width: 100%;
+                display: flex-wrap;
 
                 p {
-                    display: inline-block;
+                    display: inline-flex;
 
                     &:not(:last-child) {
                         margin-right: 12px;
@@ -81,6 +83,7 @@
         &.move-position-strategy {
             .tooltip-output {
                 @include mat-elevation(2);
+                max-width: 50vw;
 
                 &.shift-below {
                     top: calc(100% + 8px);
